force-app/main/default/objects/Enrollment_Document__c.object
<CustomObject>
    <description>The Enrollment Document Upload object stores the data and properties of documents that have been submitted to support the student’s enrollment in the Academic Program.</description>
    <label>Enrollment Document</label>
    <nameField>
        <displayFormat>ED-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>