force-app/main/default/objects/Enrollment_Document__c/fields/Date_FollowedUp__c.field-meta.xml
<CustomField>
    <fullName>Date_FollowedUp__c</fullName>
    <description>Date of Follow-Up Review</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Followed Up</label>
    <type>DateTime</type>
</CustomField>