force-app/main/default/objects/Enrollment_Document__c/fields/Date_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Reviewed__c</fullName>
    <description>Date of Review</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Reviewed</label>
    <type>DateTime</type>
</CustomField>