force-app/main/default/objects/Enrollment_Document__c/fields/Doc_File_Reference_Created__c.field-meta.xml
<CustomField>
    <fullName>Doc_File_Reference_Created__c</fullName>
    <description>Holds the date/time of most recently created doc file reference record.</description>
    <label>MAX(Doc File Reference Uploaded Date)</label>
    <summarizedField>Document_File_References__c.CreatedDate</summarizedField>
    <summaryForeignKey>Document_File_References__c.Enrollment_Document__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>