force-app/main/default/objects/Enrollment_Document__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <description>The record containing the document requirements.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Requirements</label>
    <length>100</length>
    <type>Text</type>
</CustomField>