force-app/main/default/objects/Enrollment_Document__c/fields/Document_Review__c.field-meta.xml
<CustomField>
    <fullName>Document_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Review</label>
    <referenceTo>Document_Review__c</referenceTo>
    <relationshipLabel>Enrollment Documents</relationshipLabel>
    <relationshipName>Enrollment_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>