force-app/main/default/objects/Enrollment_Document__c/fields/Enrollment_Component_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Component_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Component Affiliation</label>
    <referenceTo>Enrollment_Component_Affiliation__c</referenceTo>
    <relationshipLabel>Enrollment Documents</relationshipLabel>
    <relationshipName>Enrollment_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>