force-app/main/default/objects/Enrollment_Document__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Document Notes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>