force-app/main/default/objects/Enrollment_Document__c/fields/Official_Medical_Exemption_Status__c.field-meta.xml
<CustomField>
    <fullName>Official_Medical_Exemption_Status__c</fullName>
    <label>Official Medical Exemption Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Verified - State Form</fullName>
            </value>
            <value>
                <fullName>Verified - State Database</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>