force-app/main/default/objects/Enrollment_Document__c/fields/Official_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Official_Transcript__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Official Transcript</description>
    <label>Official Transcript</label>
    <type>Checkbox</type>
</CustomField>