force-app/main/default/objects/Enrollment_Document__c/fields/PE_ContactID__c.field-meta.xml
<CustomField>
    <fullName>PE_ContactID__c</fullName>
    <formula>Program_Enrollment__r.hed__Contact__c</formula>
    <label>PE_ContactID</label>
    <type>Text</type>
</CustomField>