force-app/main/default/objects/Enrollment_Document__c/fields/Program_Enrollment_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Program_Enrollment_AccountId__c</fullName>
    <formula>CASESAFEID(Program_Enrollment__r.hed__Contact__r.AccountId)</formula>
    <label>Program Enrollment AccountId</label>
    <type>Text</type>
</CustomField>