force-app/main/default/objects/Enrollment_Document__c/fields/Program_Enrollment_Contact__c.field-meta.xml
<CustomField>
    <fullName>Program_Enrollment_Contact__c</fullName>
    <description>Shows the full name of the Contact from the associated Program Enrollment</description>
    <formula>Program_Enrollment__r.hed__Contact__r.FirstName &amp; &quot; &quot; &amp;  Program_Enrollment__r.hed__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Enrollment Contact</label>
    <type>Text</type>
</CustomField>