force-app/main/default/objects/Enrollment_Document__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Blank Form</fullName>
            </value>
            <value>
                <fullName>Burden</fullName>
            </value>
            <value>
                <fullName>Case # missing</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Digital Signature</fullName>
            </value>
            <value>
                <fullName>Disconnect Notice</fullName>
            </value>
            <value>
                <fullName>District Verified</fullName>
            </value>
            <value>
                <fullName>Extension Approved by Principal</fullName>
            </value>
            <value>
                <fullName>Illegible</fullName>
            </value>
            <value>
                <fullName>Incomplete-Allow</fullName>
            </value>
            <value>
                <fullName>Incomplete Exemption</fullName>
            </value>
            <value>
                <fullName>Incomplete-Hold</fullName>
            </value>
            <value>
                <fullName>Incomplete Lease Agreement</fullName>
            </value>
            <value>
                <fullName>Incorrect CTR-grade level</fullName>
            </value>
            <value>
                <fullName>Incorrect CTR-other</fullName>
            </value>
            <value>
                <fullName>Incorrect CTR-school level</fullName>
            </value>
            <value>
                <fullName>Incorrect Form</fullName>
            </value>
            <value>
                <fullName>Invalid Form</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Mismatch Address</fullName>
            </value>
            <value>
                <fullName>Missing 1st Quarter Grades</fullName>
            </value>
            <value>
                <fullName>Missing 1st Semester</fullName>
            </value>
            <value>
                <fullName>Missing 2nd Quarter Grades</fullName>
            </value>
            <value>
                <fullName>Missing 2nd Semester</fullName>
            </value>
            <value>
                <fullName>Missing 3rd Quarter Grades</fullName>
            </value>
            <value>
                <fullName>Missing 4th Quarter Grades</fullName>
            </value>
            <value>
                <fullName>Missing credits earned</fullName>
            </value>
            <value>
                <fullName>Missing Final Grades</fullName>
            </value>
            <value>
                <fullName>Missing Grade Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>