force-app/main/default/objects/Enrollment_Document__c/fields/Review_Completed_Time__c.field-meta.xml
<CustomField>
    <fullName>Review_Completed_Time__c</fullName>
    <description>Datetime that the document was reviewed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Completed Time</label>
    <type>DateTime</type>
</CustomField>