force-app/main/default/objects/Enrollment_Document__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User record of the reviewer</description>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enrollment_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>