force-app/main/default/objects/Enrollment_Document__c/fields/SchoolId__c.field-meta.xml
<CustomField>
    <fullName>SchoolId__c</fullName>
    <formula>CASESAFEID(Program_Enrollment__r.hed__Account__r.ParentId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SchoolId</label>
    <type>Text</type>
</CustomField>