force-app/main/default/objects/Enrollment_Document__c/fields/SchoolYear__c.field-meta.xml
<CustomField>
    <fullName>SchoolYear__c</fullName>
    <formula>Program_Enrollment__r.Start_Year__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SchoolYear</label>
    <type>Text</type>
</CustomField>