force-app/main/default/objects/Enrollment_Document__c/fields/SIS_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>SIS_Integration_Status__c</fullName>
    <description>This field was created based on US #. 216780 (PI-03, Sprint-03). The purpose of this field is to capture the SIS Integration Status.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SIS Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>