force-app/main/default/objects/Enrollment_Document__c/fields/SIS_Update_Requested__c.field-meta.xml
<CustomField>
    <fullName>SIS_Update_Requested__c</fullName>
    <description>This field was created based on US #. 216780 (PI-03, Sprint-03).The purpose of this field to update the request from SIS system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SIS Update Requested</label>
    <type>DateTime</type>
</CustomField>