force-app/main/default/objects/Enrollment_Document__c/fields/SISDoc__c.field-meta.xml
<CustomField>
    <fullName>SISDoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SISDoc</label>
    <type>Checkbox</type>
</CustomField>