force-app/main/default/objects/Enrollment_Document__c/fields/Submission_Time__c.field-meta.xml
<CustomField>
    <fullName>Submission_Time__c</fullName>
    <description>Datetime the document was received</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission Time</label>
    <type>DateTime</type>
</CustomField>