force-app/main/default/objects/Enrollment_Document__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Document type identifier</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Types</valueSetName>
    </valueSet>
</CustomField>