force-app/main/default/objects/Enrollment_Document__c/fields/Uploader__c.field-meta.xml
<CustomField>
    <fullName>Uploader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user record of the document uploader.</description>
    <label>Uploader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enrollment_Documents_Uploader</relationshipName>
    <type>Lookup</type>
</CustomField>