force-app/main/default/objects/Enrollment_Document__c/fields/V2_External_Id__c.field-meta.xml
<CustomField>
    <fullName>V2_External_Id__c</fullName>
    <description>v2 integration</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>V2 External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>