force-app/main/default/objects/Enrollment_Document__c/validationRules/Require_Uploader_CT_to_match_PE_CT.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Uploader_CT_to_match_PE_CT</fullName>
    <active>false</active>
    <description>ADO #347908 - Prevent the Enrollment Support staff from selecting a Contact that is from a different HH than the one related to the parent PE for this ED.</description>
    <errorConditionFormula>CASESAFEID(Uploader__r.Contact.Id) &lt;&gt;     CASESAFEID(Program_Enrollment__r.Caretaker_Contact__c)</errorConditionFormula>
    <errorDisplayField>Uploader__c</errorDisplayField>
    <errorMessage>Uploader must be the CT Contact associated with the parent Program Enrollment for this Enrollment Document.</errorMessage>
</ValidationRule>