force-app/main/default/objects/Enrollment_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>Program_Enrollment__c</columns>
    <columns>Document_Link__c</columns>
    <columns>Uploader__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Enrollment_Component_Affiliation__c</columns>
    <columns>Date_Reviewed__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>